# blazevm

./: .gitignore  Cargo.toml  README.adoc
cmd/: Cargo.toml
cmd/src/: main.rs
examples/: ArrayTest.java  Fibonacci.java  ObjectTest.java
reader/: Cargo.toml  README.adoc
reader/res/test/: Fibonacci.java  MinimalClass.java
reader/src/: lib.rs
reader/src/base/: attribute_info.rs  classfile.rs  constant_pool.rs  error.rs  mod.rs  stack_frame.rs
reader/src/descriptor/: class.rs  field.rs  method.rs  mod.rs
runner/: Cargo.toml
runner/src/: class.rs  class_loader.rs  class_manager.rs  constant_pool.rs  lib.rs  opcode.rs  thread.rs  thread_manager.rs  vm.rs
runner/src/opcode/: comparison.rs  constant.rs  control.rs  conversion.rs  load.rs  math.rs  mod.rs  reference.rs  stack.rs  store.rs
vm/: Cargo.toml
vm/src/: class.rs  class_loader.rs  class_manager.rs  constant_pool.rs  lib.rs  slot.rs  thread.rs  thread_manager.rs  vm.rs
vm/src/alloc/: array.rs  mod.rs  object.rs
vm/src/opcode/: comparison.rs  constant.rs  control.rs  conversion.rs  extended.rs  load.rs  math.rs  mod.rs  reference.rs  store.rs
