[package]
name = "cmd"
authors = ["fusetim"]
version = "0.1.0"
edition = "2021"
license = "CECILL-2.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
reader = { path = "../reader" }
vm = { path = "../vm" }
log = { version = "0.4.20", features = ["std"] }
pretty_env_logger = "0.5"