[package]
name = "reader"
authors = ["fusetim"]
version = "0.1.0"
edition = "2021"
license = "CECILL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.13.3"
cesu8 = "1.1.0"
dumpster = "0.1.2"
flagset = "0.4.4"
snafu = "0.8.0"
